# pcd_sp_2024

./: pyproject.toml
Codigo/: Carga de Datos Socrata.ipynb
app/: contratos.py
